--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
 	<title>Барбершоп "Бородинский"</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
+
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <header class="page-header">
