--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,35 @@
 </head>
 <body>
   <header class="page-header">
-    <div class="page-header__logo"></div>
-    <nav class="main-nav">
+    <h1 class="visually-hidden">Барбершоп "Бородинский" - истинно мужская классика</h1>
+    <div class="page-header__logo">
+      <img src="img/logo-mobile.svg" width="370" height="153" alt="Барбершоп Бородинский">
+    </div>
+    <nav class="main-nav  main-nav--opened">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
       <div class="main-nav__wrapper">
-        <ul class="main-nav__items"></ul>
-        <ul class="main-nav__user-items"></ul>
+        <ul class="main-nav__items">
+          <li class="main-nav__item  main-nav__item--active">
+            <a>Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="photo.html">Наши работы</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="">Записаться</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="">Контакты</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="">HTML Academy</a>
+          </li>
+        </ul>
+        <ul class="main-nav__user-items">
+          <li class="main-nav__user-item">
+            <a class="main-nav__user-login" href="" title="Войти">Вход</a>
+          </li>
+        </ul>
       </div>
     </nav>
   </header>
