--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <div class="page-header__logo">
       <img src="img/logo-mobile.svg" width="370" height="153" alt="Барбершоп Бородинский">
     </div>
-    <nav class="main-nav  main-nav--opened">
+    <nav class="main-nav  main-nav--closed  main-nav--nojs">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__items">
@@ -80,5 +80,22 @@
       <p class="page-footer__copyright"></p>
     </div>
   </footer>
+
+  <script>
+    var navMain = document.querySelector(".main-nav");
+    var navToggle = document.querySelector(".main-nav__toggle");
+
+    navMain.classList.remove("main-nav--nojs");
+
+    navToggle.addEventListener("click", function() {
+      if (navMain.classList.contains("main-nav--closed")) {
+        navMain.classList.remove("main-nav--closed");
+        navMain.classList.add("main-nav--opened");
+      } else {
+        navMain.classList.add("main-nav--closed");
+        navMain.classList.remove("main-nav--opened");
+      }
+    });
+  </script>
 </body>
 </html>
