--- a/app/photo.html
+++ b/app/photo.html
@@ -11,7 +11,11 @@
 <body>
   <header class="page-header">
     <div class="page-header__logo">
-      <img src="img/logo-mobile.svg" width="370" height="153" alt="Барбершоп Бородинский">
+      <picture>
+        <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logotype-tablet.svg">
+        <img src="img/logotype-mobile.svg" width="370" height="153" alt="Барбершоп Бородинский">
+      </picture>
     </div>
     <nav class="main-nav  main-nav--closed  main-nav--nojs">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -41,46 +45,144 @@
       </div>
     </nav>
   </header>
-  <section class="price">
-    <h1 class="price__header">Прейскурант</h1>
-    <div class="price__columns">
-      <table class="price__table">
-        <tr>
-          <td class="col-1">1</td>
-          <td class="col-2">Класическая стрижка</td>
-          <td class="col-3"><span class="bracket">(</span>с мытьём головы<span class="bracket">)</span></td>
-          <td class="col-4">1 500 руб.</td>
-        </tr>
-        <tr>
-          <td class="col-1">2</td>
-          <td class="col-2">Современный вариант</td>
-          <td class="col-3"><span class="bracket">(</span>с мытьём головы<span class="bracket">)</span></td>
-          <td class="col-4">1 500 руб.</td>
-        </tr>
-        <tr>
-          <td class="col-1">3</td>
-          <td class="col-2">Индивидуальный подход</td>
-          <td class="col-3"><span class="bracket">(</span>с мытьём головы<span class="bracket">)</span></td>
-          <td class="col-4">2 000 руб.</td>
-        </tr>
-        <tr>
-          <td class="col-1">4</td>
-          <td class="col-2">Бритье бороды</td>
-          <td class="col-3"><span class="bracket">(</span>без мытья<span class="bracket">)</span></td>
-          <td class="col-4">500 руб.</td>
-        </tr>
-        <tr>
-          <td class="col-1">5</td>
-          <td class="col-2">Брытьё головы</td>
-          <td class="col-3"><span class="bracket">(</span>с мытьём головы<span class="bracket">)</span></td>
-          <td class="col-4">1 000 руб.</td>
-        </tr>
-      </table>
-      <p class="price__discount">
-        С 10:00 до 14:00 скидка 20%
-      </p>
-    </div>
-  </section>
+  <main class="page-main page-main--inner">
+    <section class="page-title">
+      <div class="page-title__wrapper">
+        <h1 class="page-title__text">Наши работы</h1>
+        <a class="page-title__to-main  btn" href="index.html">На главную</a>
+      </div>
+    </section>
+
+    <section class="works-list">
+      <div class="works-list__wrapper">
+        <article class="works-item  works-item--work-of-month">
+          <div class="works-item__img-wrapper">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-1-desktop.jpg 1x, img/photo-1-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="img/photo-1-tablet.jpg 1x, img/photo-1-tablet.jpg">
+              <img class="works-item__img" src="img/photo-1-mobile.jpg" srcset="img/photo-1-mobile.jpg" alt="Пример нашей работы">
+            </picture>
+          </div>
+          <div class="works-item__review">
+            <div class="works-item__review-text">
+              <h2 class="works-item__title">Лжепётр Мчиславский</h2>
+              <blockquote class="works-item__blockquote">Где я только ни стригся, но так как делаете это вы - не умеет никто другой! Еще раз спасибо и до скорого!</blockquote>
+            </div>
+            <div class="works-item__parameter-list">
+              <div class="works-item__parameter-item  works-item__parameter-item--haircut">Стрижка</div>
+              <div class="works-item__parameter-item  works-item__parameter-item--shaving">Бритьё</div>
+              <div class="works-item__parameter-item  works-item__parameter-item--mustache">Усы</div>
+            </div>
+          </div>
+        </article>
+
+        <article class="works-item">
+          <div class="works-item__img-wrapper">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-2-desktop.jpg 1x, img/photo-2-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="img/photo-2-tablet.jpg 1x, img/photo-2-tablet.jpg">
+              <img class="works-item__img" src="img/photo-2-mobile.jpg" srcset="img/photo-2-mobile.jpg" alt="Пример нашей работы">
+            </picture>
+          </div>
+          <div class="works-item__review">
+            <div class="works-item__review-text">
+              <h2 class="works-item__title">Саша Мальцев</h2>
+              <blockquote class="works-item__blockquote">
+                Попросил омолодить и омолодили! Кто теперь скажет, что мне 45?
+              </blockquote>
+            </div>
+            <div class="works-item__parameter-list">
+              <div class="works-item__parameter-item  works-item__parameter-item--haircut">Стрижка</div>
+            </div>
+          </div>
+        </article>
+
+        <article class="works-item">
+          <div class="works-item__img-wrapper">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-3-desktop.jpg 1x, img/photo-3-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="img/photo-3-tablet.jpg 1x, img/photo-3-tablet.jpg">
+              <img class="works-item__img" src="img/photo-3-mobile.jpg" srcset="img/photo-3-mobile.jpg" alt="Пример нашей работы">
+            </picture>
+          </div>
+          <div class="works-item__review">
+            <div class="works-item__review-text">
+              <h2 class="works-item__title">Владимир Иваныч</h2>
+              <blockquote class="works-item__blockquote">
+                К зимнему сезону - готов!
+              </blockquote>
+            </div>
+            <div class="works-item__parameter-list">
+              <div class="works-item__parameter-item  works-item__parameter-item--shaving">Бритьё</div>
+              <div class="works-item__parameter-item  works-item__parameter-item--mustache">Усы</div>
+            </div>
+          </div>
+        </article>
+
+        <article class="works-item">
+          <div class="works-item__img-wrapper">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-4-desktop.jpg 1x, img/photo-4-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="img/photo-4-tablet.jpg 1x, img/photo-4-tablet.jpg">
+              <img class="works-item__img" src="img/photo-4-mobile.jpg" srcset="img/photo-4-mobile.jpg" alt="Пример нашей работы">
+            </picture>
+          </div>
+          <div class="works-item__review">
+            <div class="works-item__review-text">
+              <h2 class="works-item__title">Винстон Синий</h2>
+              <blockquote class="works-item__blockquote">
+                Как только заростаю и волосы начинают мешать видеть - бегом в Бородинский!
+              </blockquote>
+            </div>
+            <div class="works-item__parameter-list">
+              <div class="works-item__parameter-item  works-item__parameter-item--haircut">Стрижка</div>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <section class="price">
+      <h1 class="price__header">Прейскурант</h1>
+      <div class="price__columns">
+        <table class="price__table">
+          <tr>
+            <td class="col-1">1</td>
+            <td class="col-2">Класическая стрижка</td>
+            <td class="col-3"><span class="bracket">(</span>с мытьём головы<span class="bracket">)</span></td>
+            <td class="col-4">1 500 руб.</td>
+          </tr>
+          <tr>
+            <td class="col-1">2</td>
+            <td class="col-2">Современный вариант</td>
+            <td class="col-3"><span class="bracket">(</span>с мытьём головы<span class="bracket">)</span></td>
+            <td class="col-4">1 500 руб.</td>
+          </tr>
+          <tr>
+            <td class="col-1">3</td>
+            <td class="col-2">Индивидуальный подход</td>
+            <td class="col-3"><span class="bracket">(</span>с мытьём головы<span class="bracket">)</span></td>
+            <td class="col-4">2 000 руб.</td>
+          </tr>
+          <tr>
+            <td class="col-1">4</td>
+            <td class="col-2">Бритье бороды</td>
+            <td class="col-3"><span class="bracket">(</span>без мытья<span class="bracket">)</span></td>
+            <td class="col-4">500 руб.</td>
+          </tr>
+          <tr>
+            <td class="col-1">5</td>
+            <td class="col-2">Брытьё головы</td>
+            <td class="col-3"><span class="bracket">(</span>с мытьём головы<span class="bracket">)</span></td>
+            <td class="col-4">1 000 руб.</td>
+          </tr>
+        </table>
+        <p class="price__discount">
+          С 10:00 до 14:00 скидка 20%
+        </p>
+      </div>
+    </section>
+  </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <p class="page-footer__contacts"></p>
